force-app/main/default/objects/Beneficiaire__c/Beneficiaire__c.object-meta.xml
<CustomObject>
    <label>Bénéficiaire</label>
    <nameField>
        <displayFormat>B-{00000000}</displayFormat>
        <label>Bénéficiaire Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bénéficiaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>