force-app/main/default/objects/Beneficiaire__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bénéficiaires</relationshipLabel>
    <relationshipName>B_n_ficiaires</relationshipName>
    <type>Lookup</type>
</CustomField>