force-app/main/default/objects/Beneficiaire__c/fields/Lieu_de_naissance__c.field-meta.xml
<CustomField>
    <fullName>Lieu_de_naissance__c</fullName>
    <label>Lieu de naissance</label>
    <length>30</length>
    <type>Text</type>
</CustomField>