force-app/main/default/objects/Beneficiaire__c/fields/Nom_Benef__c.field-meta.xml
<CustomField>
    <fullName>Nom_Benef__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  Nom__c &amp; &apos; &apos; &amp; Prenom__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nom complet</label>
    <type>Text</type>
</CustomField>