force-app/main/default/objects/Beneficiaire__c/fields/Numero_de_telephone__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_telephone__c</fullName>
    <label>Numéro de téléphone</label>
    <type>Phone</type>
</CustomField>