force-app/main/default/objects/Beneficiaire__c/fields/PourcentageRepartition__c.field-meta.xml
<CustomField>
    <fullName>PourcentageRepartition__c</fullName>
    <label>Pourcentage de Repartition</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>