force-app/main/default/objects/Beneficiaire__c/fields/Type_de_beneficiaire__c.field-meta.xml
<CustomField>
    <fullName>Type_de_beneficiaire__c</fullName>
    <label>Type de bénéficiaire</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bénéficiaire capital obsèques et décès</fullName>
                <default>true</default>
                <label>Bénéficiaire capital obsèques et décès</label>
            </value>
            <value>
                <fullName>Bénéficiaire capital obsèques</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>