force-app/main/default/objects/Beneficiaire__c/recordTypes/Beneficiaires.recordType-meta.xml
<RecordType>
    <fullName>Beneficiaires</fullName>
    <active>true</active>
    <label>Bénéficiaires</label>
</RecordType>